--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Shania. And thi is my webapp.
+            Hi! I am Shania. And this is my webapp.
             <h2>Some change I made</h2>
         </div>
         <script type="text/javascript" src="/ui/main.js">
